# twinworld

./: .gitignore  AGENTS.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
assets/: architecture.mmd
docs/: learned-concepts.json
examples/: abduction_scaling.py  blocks_world.py  causal_validation.py  cf_benchmark.py  concept_report.py  discrimination_report.py  graph_motifs.py  letter_strings.py  llm_baseline.py  report_blocks.html  representation_report.py  search_report.py  tabular_recourse.py  vertical_slice.py  visual_report.py
examples/getting_started/: 01_pipeline.py  02_queries.py  03_confidence.py  04_tabular.py  05_relational.py  06_sequence.py  07_graph.py
src/dowhat/: __init__.py  analogy.py  api.py  asp.py  asp_solver.py  benchmark.py  concepts.py  copycat.py  discriminate.py  engine.py  mechanisms.py  metrics.py  refute.py  representation.py  select.py  viz.py
src/dowhat/baselines/: llm.py
src/dowhat/domains/: arc.py  blocks.py  causalarc.py
src/twinworld/: __init__.py  alternatives.py  analogy.py  api.py  asp.py  asp_solver.py  backend.py  concepts.py  copycat.py  discriminate.py  engine.py  mechanisms.py  metrics.py  refute.py  representation.py  select.py  viz.py
src/twinworld/backends/: __init__.py  graph.py  grid.py  relational.py  sequence.py  tabular.py
src/twinworld/baselines/: llm.py
src/twinworld/domains/: arc.py  blocks.py  causalarc.py
tests/: conftest.py  test_abduction.py  test_alternatives.py  test_analogy.py  test_api.py  test_asp_solver.py  test_backend.py  test_blocks.py  test_blocks_tau.py  test_causalarc.py  test_concepts.py  test_confidence.py  test_copycat.py  test_engine.py  test_experiment3.py  test_experiment4.py  test_graph.py  test_llm_baseline.py  test_mechanisms.py  test_metrics_refute.py  test_preimage_budget.py  test_relational.py  test_representation.py  test_representation_m2.py  test_resegmentation.py  test_select.py  test_sequence.py  test_tabular.py  test_viz.py
