[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "twinworld"
version = "0.1.1"
description = "Counterfactual reasoning and explanation over symbolic state-transition traces — twin-world forking, certified minimal contrastives, and a DoWhy-style staged API; ARC and blocks world as first domains"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Aries Bucquet" }]
keywords = [
    "counterfactuals",
    "causality",
    "causal-inference",
    "explainability",
    "neuro-symbolic",
    "twin-world",
    "ARC",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "networkx>=3.0",
]

[project.urls]
# TODO(release): point at the public repository once it exists
Homepage = "https://github.com/loudness/twinworld"
Repository = "https://github.com/loudness/twinworld"
Issues = "https://github.com/loudness/twinworld/issues"

[project.optional-dependencies]
arc = ["arckit>=0.1"]
asp = ["clingo>=5.6"]
dev = ["pytest>=8", "ruff>=0.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
twinworld = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
